# josmoze-complete-codebase

./: .gitignore  10-articles-blog-final.md  AGENTS_RENOMMAGE_FINAL.md  ANALYSE_CONCURRENTIELLE_RAPPORT_FINAL.md  ANALYSE_MARCHE_NOUVEAUX_PRODUITS.md  ARTICLE_BLOG_1_DANGERS_EAU_ROBINET.md  ARTICLE_BLOG_2_NITRATES_PESTICIDES_CHLORE.md  ARTICLE_BLOG_3_OSMOSEUR_SOLUTION.md  BASE_DONNEES_PROSPECTS_GUIDE.md  BUDGET_MARKETING_PREMIER_MOIS.md  CONFIGURATION_LEGALE_PAIEMENTS.md  CONFIGURATION_ROUTAGE_CRM.md  CRM_ACCESS_DIRECT.html  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_COMPLETE.md  Dockerfile  ETUDE_ROI_50_PIECES.md  GUIDE_CREATION_COMPTES_APIs.md  GUIDE_DEPLOIEMENT_CRM.md  GUIDE_DOMAINE_JOSMOZE.md  GUIDE_NAMECHEAP_JOSMOZE.md  GUIDE_VIDEO_SIMPLIFIE.md  NOUVELLES_SEQUENCES_EMAIL.md  OSMOSE_QUICK_DEPLOY.sh  OSMOSE_SYSTEM_COMPLETE.md  OSMOSE_SYSTEM_PORTABLE.py  OSMOSE_VIDEO_SCRIPT.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_DEPLOY_NAMECHEAP.sh  PRODUCTION_MANIFEST.json  RAPPORT_ALTERNATIVES_OPENAI.md  SCRAPER_AGENT_GUIDE_COMPLET.md  SECURITY_UPDATE.md  TRANSLATION_GUARDIAN_DEPLOY_REPORT.md  VNC_DEPLOYMENT_SCRIPT.sh  backend_test.py  blog_images_urls.json  debug_permissions.py  diagnostic_results_20250918_170521.json  diagnostic_test.py  (+59 more)
.emergent/: summary.txt
backend/: .env  =3.1.0  Dockerfile  abandoned_cart_service.py  admin_upload.py  ai_agents.py  ai_agents_system.py  ai_product_scraper.py  analytics_dashboard.py  auth.py  auto_prospector.py  blog_manager.py  brand_monitoring_agent.py  clean_for_production.py  conversational_agents.py  conversational_agents_v2.py  (+41 more)
(+101 files in other folders)
